--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -34,6 +34,6 @@
     </div>
   </form>
  
-    <ion-button (click)="signUp()" expand="full" color="primary">Sing up</ion-button>
-    <ion-button (click)="signIn()" expand="full" color="success">Sing in</ion-button>
+    <ion-button (click)="signUp()" expand="full" color="primary">Registrarse</ion-button>
+    <ion-button (click)="signIn()" expand="full" color="success">Inicar Sesión</ion-button>
 </ion-content>  
