--- a/src/app/pages/contactos/contactos.page.html
+++ b/src/app/pages/contactos/contactos.page.html
@@ -1,3 +1,5 @@
+<!-- contactos.page.html -->
+
 <ion-header>
   <ion-toolbar>
     <ion-title>Lista de contactos</ion-title>
@@ -5,6 +7,16 @@
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <!-- Lista de contactos existentes -->
+    <ion-item *ngFor="let contacto of contactos" (click)="verDetalles(contacto.id)">
+      <ion-thumbnail slot="start">
+        <ion-img [src]="contacto.foto"></ion-img>
+      </ion-thumbnail>
+      <ion-label>{{ contacto.nombre }} {{ contacto.apellido }}</ion-label>
+    </ion-item>
+  </ion-list>
+
   <!-- Botón flotante en la esquina inferior derecha -->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="agregarContacto()">
