--- a/src/app/pages/detallecontacto/detallecontacto.page.html
+++ b/src/app/pages/detallecontacto/detallecontacto.page.html
@@ -10,13 +10,13 @@
 </ion-header>
 
 <ion-content>
-  <ion-thumbnail slot="start">
+  <!-- <ion-thumbnail slot="start">
     <ion-img [src]="contacto.foto"></ion-img>
-  </ion-thumbnail>
-  <ion-label>{{ contacto.nombre }} {{ contacto.apellido }}</ion-label>
+  </ion-thumbnail> -->
+  <ion-label>{{ detalleContacto?.nombre }} {{ detalleContacto?.apellido }}</ion-label>
   <!-- Agrega más campos según la información que quieras mostrar -->
-  <ion-label>Ubicación: {{ contacto.ubicacion }}</ion-label>
-  <ion-label>Número de Celular: {{ contacto.numeroCelular }}</ion-label>
-  <ion-label>Correo: {{ contacto.correo }}</ion-label>
+  <ion-label>Ubicación: {{ detalleContacto?.ubicacion }}</ion-label>
+  <ion-label>Número de Celular: {{ detalleContacto?.numeroCelular }}</ion-label>
+  <ion-label>Correo: {{ detalleContacto?.correo }}</ion-label>
   <!-- ... -->
 </ion-content>
