--- a/src/app/pages/edit-contacto/edit-contacto.page.html
+++ b/src/app/pages/edit-contacto/edit-contacto.page.html
@@ -1,40 +1,42 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Agregar Contacto Nuevo</ion-title>
+    <ion-back-button defaultHref="/contactos"></ion-back-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-item>
     <ion-label position="floating">Nombre</ion-label>
-    <ion-input [(ngModel)]="nombre" name="nombre" type="text"></ion-input>
+    <ion-input [(ngModel)]="detalleContacto.nombre" name="nombre" type="text"></ion-input>
   </ion-item>
+
 
   <ion-item>
     <ion-label position="floating">Apellido</ion-label>
-    <ion-input [(ngModel)]="apellido" name="apellido" type="text"></ion-input>
+    <ion-input [(ngModel)]="detalleContacto.apellido" name="apellido" type="text"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Ubicación</ion-label>
-    <ion-input [(ngModel)]="ubicacion" name="ubicacion" type="text" readonly></ion-input>
+    <ion-input [(ngModel)]="detalleContacto.ubicacion" name="ubicacion" type="text" readonly></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Foto</ion-label>
     <!-- Puedes utilizar ion-input para el nombre del archivo o implementar un selector de archivos -->
-    <ion-input [(ngModel)]="foto" name="foto" type="text"></ion-input>
+    <ion-input [(ngModel)]="detalleContacto.foto" name="foto" type="text"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Número de Celular</ion-label>
-    <ion-input [(ngModel)]="numeroCelular" name="numeroCelular" type="tel"></ion-input>
+    <ion-input [(ngModel)]="detalleContacto.numeroCelular" name="numeroCelular" type="tel"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Correo</ion-label>
-    <ion-input [(ngModel)]="correo" name="correo" type="email"></ion-input>
+    <ion-input [(ngModel)]="detalleContacto.correo" name="correo" type="email"></ion-input>
   </ion-item>
 
-  <ion-button expand="full" (click)="guardarContacto()">Guardar</ion-button>
+  <ion-button expand="full" (click)="guardarContacto()">Actualizar</ion-button>
 </ion-content>
