--- a/src/app/pages/agregarcontacto/agregarcontacto.page.html
+++ b/src/app/pages/agregarcontacto/agregarcontacto.page.html
@@ -20,11 +20,6 @@
     <ion-input [(ngModel)]="ubicacion" name="ubicacion" type="text" readonly></ion-input>
   </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Foto</ion-label>
-    <!-- Puedes utilizar ion-input para el nombre del archivo o implementar un selector de archivos -->
-    <ion-input [(ngModel)]="foto" name="foto" type="text"></ion-input>
-  </ion-item>
 
   <ion-item>
     <ion-label position="floating">Número de Celular</ion-label>
@@ -35,6 +30,20 @@
     <ion-label position="floating">Correo</ion-label>
     <ion-input [(ngModel)]="correo" name="correo" type="email"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-label position="floating">Foto</ion-label>
+    <!-- Puedes utilizar ion-input para el nombre del archivo o implementar un selector de archivos -->
+    <ion-grid>
+      <ion-row>
+        <ion-col size="2" *ngFor="let photo of photos; index as position">
+          <ion-img [src]="photo.webviewPath" (click)="showActionSheet(position)"></ion-img>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
+    <ion-fab-button (click)="addNewToGallery()">
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-item>
   <ion-button expand="full" (click)="guardarContacto()">Guardar</ion-button>
 </ion-content>
