borrar foto y editar listos

--- a/src/app/pages/contactos/contactos.page.html
+++ b/src/app/pages/contactos/contactos.page.html
@@ -24,7 +24,7 @@
           <ion-icon name="create"></ion-icon>
         </ion-button>
         <!-- Botón Eliminar -->
-        <ion-button color="danger" (click)="eliminarContacto(contacto.id)">
+        <ion-button color="danger" (click)="eliminarContacto(contacto.id, contacto.foto)">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
       </ion-buttons>
