--- a/src/app/pages/agregarcontacto/agregarcontacto.page.html
+++ b/src/app/pages/agregarcontacto/agregarcontacto.page.html
@@ -6,6 +6,21 @@
 
 <ion-content>
   <ion-item>
+    <ion-label position="floating">Foto</ion-label>
+    <!-- Puedes utilizar ion-input para el nombre del archivo o implementar un selector de archivos -->
+    <ion-grid>
+      <ion-row>
+        <ion-col size="2" *ngFor="let photo of photos; index as position">
+          <ion-img [src]="photo.webviewPath" (click)="showActionSheet(position)"></ion-img>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-fab-button (click)="addNewToGallery()" [disabled]="this.photos.length > 0">
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-item>
+  <ion-item>
     <ion-label position="floating">Nombre</ion-label>
     <ion-input [(ngModel)]="nombre" name="nombre" type="text"></ion-input>
   </ion-item>
@@ -29,21 +44,6 @@
   <ion-item>
     <ion-label position="floating">Correo</ion-label>
     <ion-input [(ngModel)]="correo" name="correo" type="email"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="floating">Foto</ion-label>
-    <!-- Puedes utilizar ion-input para el nombre del archivo o implementar un selector de archivos -->
-    <ion-grid>
-      <ion-row>
-        <ion-col size="2" *ngFor="let photo of photos; index as position">
-          <ion-img [src]="photo.webviewPath" (click)="showActionSheet(position)"></ion-img>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
-    <ion-fab-button (click)="addNewToGallery()">
-      <ion-icon name="camera"></ion-icon>
-    </ion-fab-button>
   </ion-item>
   <ion-button expand="full" (click)="guardarContacto()">Guardar</ion-button>
 </ion-content>
