--- a/src/app/pages/edit-contacto/edit-contacto.page.html
+++ b/src/app/pages/edit-contacto/edit-contacto.page.html
@@ -8,11 +8,13 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Foto</ion-label>
-    <!-- Puedes utilizar ion-input para el nombre del archivo o implementar un selector de archivos -->
     <ion-grid>
       <ion-row>
         <ion-col size="2">
           <ion-img [src]="detalleContacto.foto"></ion-img>
+        </ion-col>
+        <ion-col size="10">
+          <ion-button (click)="seleccionarFoto()">Seleccionar Foto</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -21,7 +23,6 @@
     <ion-label position="floating">Nombre</ion-label>
     <ion-input [(ngModel)]="detalleContacto.nombre" name="nombre" type="text"></ion-input>
   </ion-item>
-
 
   <ion-item>
     <ion-label position="floating">Apellido</ion-label>
@@ -32,7 +33,6 @@
     <ion-label position="floating">Ubicación</ion-label>
     <ion-input [(ngModel)]="detalleContacto.ubicacion" name="ubicacion" type="text" readonly></ion-input>
   </ion-item>
-
 
   <ion-item>
     <ion-label position="floating">Número de Celular</ion-label>
