--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -5,8 +5,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="login-container">
   <form [formGroup]="credentialForm">
+    <!-- Email Input -->
     <ion-item>
       <ion-input
         placeholder="Email address"
@@ -19,21 +20,27 @@
       <span *ngIf="email.errors?.required">Email is required</span>
       <span *ngIf="email.errors?.email">Email is invalid</span>
     </div>
- 
+    
+    <!-- Password Input -->
     <ion-item>
       <ion-input
-      placeholder="Password"
-      type="password"
-      formControlName="password"
-      clearInput="true"
-    ></ion-input>
+        placeholder="Password"
+        type="password"
+        formControlName="password"
+        clearInput="true"
+      ></ion-input>
     </ion-item>
     <div *ngIf="(password.dirty || password.touched) && password.errors" class="errors">
       <span *ngIf="password.errors?.required">Password is required</span>
       <span *ngIf="password.errors?.minlength">Password needs to be 6 characters</span>
     </div>
   </form>
- 
+
+  <div class="button-container">
+    <!-- SignUp Button -->
     <ion-button (click)="signUp()" expand="full" color="primary">Registrarse</ion-button>
-    <ion-button (click)="signIn()" expand="full" color="success">Inicar Sesión</ion-button>
-</ion-content>  
+
+    <!-- SignIn Button -->
+    <ion-button (click)="signIn()" expand="full" color="success">Iniciar Sesión</ion-button>
+  </div>
+</ion-content>
