--- a/src/app/pages/edit-contacto/edit-contacto.page.html
+++ b/src/app/pages/edit-contacto/edit-contacto.page.html
@@ -8,41 +8,59 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Foto</ion-label>
-    <!-- Puedes utilizar ion-input para el nombre del archivo o implementar un selector de archivos -->
     <ion-grid>
       <ion-row>
         <ion-col size="2">
           <ion-img [src]="detalleContacto.foto"></ion-img>
         </ion-col>
+        <ion-col size="10">
+          <ion-button (click)="seleccionarFoto()">Seleccionar Foto</ion-button>
+        </ion-col>
       </ion-row>
     </ion-grid>
   </ion-item>
-  <ion-item>
-    <ion-label position="floating">Nombre</ion-label>
-    <ion-input [(ngModel)]="detalleContacto.nombre" name="nombre" type="text"></ion-input>
-  </ion-item>
 
+  <form #contactForm="ngForm">
+    <ion-item>
+      <ion-label position="floating">Nombre</ion-label>
+      <ion-input [(ngModel)]="detalleContacto.nombre" name="nombre" type="text" pattern="[A-Za-z]+"
+        required></ion-input>
+      <ion-text color="danger"
+        *ngIf="contactForm.controls['nombre']?.invalid && (contactForm.controls['nombre']?.dirty || contactForm.controls['nombre']?.touched)">
+        Ingrese solo letras en el nombre
+      </ion-text>
+    </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Apellido</ion-label>
-    <ion-input [(ngModel)]="detalleContacto.apellido" name="apellido" type="text"></ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-label position="floating">Apellido</ion-label>
+      <ion-input [(ngModel)]="detalleContacto.apellido" name="apellido" type="text" pattern="[A-Za-z]+"
+        required></ion-input>
+      <ion-text color="danger"
+        *ngIf="contactForm.controls['apellido']?.invalid && (contactForm.controls['apellido']?.dirty || contactForm.controls['apellido']?.touched)">
+        Ingrese solo letras en el apellido
+      </ion-text>
+    </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Ubicación</ion-label>
-    <ion-input [(ngModel)]="detalleContacto.ubicacion" name="ubicacion" type="text" readonly></ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-label position="floating">Ubicación</ion-label>
+      <ion-input [(ngModel)]="detalleContacto.ubicacion" name="ubicacion" type="text" readonly></ion-input>
+    </ion-item>
 
+    <ion-item>
+      <ion-label position="floating">Número de Celular</ion-label>
+      <ion-input [(ngModel)]="detalleContacto.numeroCelular" name="numeroCelular" type="tel" pattern="[0-9]+"
+        required></ion-input>
+      <ion-text color="danger"
+        *ngIf="contactForm.controls['numeroCelular']?.invalid && (contactForm.controls['numeroCelular']?.dirty || contactForm.controls['numeroCelular']?.touched)">
+        Ingrese solo números en el número de celular
+      </ion-text>
+    </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Número de Celular</ion-label>
-    <ion-input [(ngModel)]="detalleContacto.numeroCelular" name="numeroCelular" type="tel"></ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-label position="floating">Correo</ion-label>
+      <ion-input [(ngModel)]="detalleContacto.correo" name="correo" type="email"></ion-input>
+    </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Correo</ion-label>
-    <ion-input [(ngModel)]="detalleContacto.correo" name="correo" type="email"></ion-input>
-  </ion-item>
-
-  <ion-button expand="full" (click)="guardarContacto()">Actualizar</ion-button>
+    <ion-button expand="full" (click)="guardarContacto()" [disabled]="!contactForm.valid">Actualizar</ion-button>
+  </form>
 </ion-content>
