--- a/src/app/pages/agregarcontacto/agregarcontacto.page.html
+++ b/src/app/pages/agregarcontacto/agregarcontacto.page.html
@@ -10,15 +10,15 @@
     <!-- Puedes utilizar ion-input para el nombre del archivo o implementar un selector de archivos -->
     <ion-grid>
       <ion-row>
-        <ion-col size="2" *ngFor="let photo of photos; index as position">
-          <ion-img [src]="photo.webviewPath" (click)="showActionSheet(position)"></ion-img>
+        <ion-col size="2">
+          <ion-img [src]="foto"></ion-img>
+        </ion-col>
+        <ion-col size="10">
+          <ion-button (click)="addNewToGallery()">Seleccionar Foto</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
 
-    <ion-fab-button (click)="addNewToGallery()" [disabled]="this.photos.length > 0">
-      <ion-icon name="camera"></ion-icon>
-    </ion-fab-button>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Nombre</ion-label>
